kubernetes/pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: actix-geo-widget
  namespace: geo-widget
spec:
  volumes:
    - name: geo-widget-db
      persistentVolumeClaim:
        claimName: geo-widget
  containers:
    - name: actix-geo-widget
      image: ghcr.io/kyoobit/actix-geo-widget:latest
      args:
        - --verbose
        - --asn-database-file
        - /var/db/GeoLite2-ASN.mmdb
        - --city-database-file
        - /var/db/GeoLite2-City.mmdb
      ports:
        - containerPort: 8888
          name: "geo-widget"
      volumeMounts:
        - mountPath: "/var/db"
          name: geo-widget-db
