kubernetes/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actix-geo-widget
  namespace: geo-widget
spec:
  rules:
    - host: actix-geo-widget.microk8s.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: actix-geo-widget
                port:
                  number: 8888
